# wordless

./: LICENSE  README.md  SETUP_WIZARD_UPDATES.md  pyproject.toml  test.py  test_search.py
.code_memory/: chroma.sqlite3
gateway/: Dockerfile  gateway_server.py
wordless/: __init__.py  config.py  config_manager.py  gateway_client.py  main.py  mcp_server.py  search.py
wordless.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
wordless/cli/: CONFIG_README.md  SETUP_README.md  __init__.py  app.py  commands.py  repl.py
wordless/indexer/: callgraph.py  embedder.py  parser.py  store.py
