[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordless"
version = "0.1.0"
description = "Semantic code search engine for Python codebases"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Tejas Koli", email = "tejas.koli.2k183742@gmail.com"}
]
license = {text = "MIT"}
keywords = ["semantic-search", "code-search", "embeddings", "ast", "mcp", "ai-agents"]
dependencies = [
    "tree-sitter>=0.20",
    "tree-sitter-python>=0.20",
    "chromadb>=1.5",
    "httpx>=0.24",
    "ollama>=0.1",
    "prompt-toolkit>=3.0",
    "typer>=0.10",
    "fastmcp>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wordless*"]

[project.scripts]
wordless = "wordless.cli.app:main"

[project.urls]
Homepage = "https://github.com/Tejas1Koli/wordless"
Repository = "https://github.com/Tejas1Koli/wordless"
Issues = "https://github.com/Tejas1Koli/wordless/issues"